<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/drawer_option_1"
        android:icon="@drawable/deployed_code"
        android:title="@string/drawer_menu_1" />

    <item android:id="@+id/drawer_option_2"
        android:icon="@drawable/browse_activity"
        android:title="@string/drawer_menu_2" />

    <item android:id="@+id/drawer_option_3"
        android:icon="@drawable/flight_land"
        android:title="@string/drawer_menu_3" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />

    <item android:id="@+id/action_create_order"
        android:title="@string/action_title"
        android:icon="@drawable/outline_info"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />

</menu>